# VideoToolBox

./: CMakeLists.txt  main.cpp
src/: stream.cpp  stream.h  vt_decoder.cpp  vt_decoder.h  vt_encoder.cpp  vt_encoder.h
